--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,14 +1,12 @@
 name: Publish
 
-on:
-  push:
-    tags:
-      - '*'
+on: [push]
 
 jobs:
   publish:
     name: Publish for ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
+    if: ${{ contains(github.event.head_commit.message, '[PUBLISH]') }}
     strategy:
       matrix:
         include:
