--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,10 +3,10 @@ name: Publish
 on: [push]
 
 jobs:
+  if: ${{ contains(github.event.head_commit.message, '[PUBLISH]') }}
   publish:
     name: Publish for ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
-    if: ${{ contains(github.event.head_commit.message, '[PUBLISH]') }}
     strategy:
       matrix:
         include:
@@ -22,6 +22,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - uses: actions-rs/toolchain@v1
     - name: Build
       run: cargo build --release
     - name: Upload binaries to release
