--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,13 +12,13 @@ jobs:
         include:
           - os: ubuntu-latest
             artifact_name: pie
-            asset_name: pie-linux-amd64
+            asset_name: linux-pie
           - os: windows-latest
             artifact_name: pie.exe
-            asset_name: pie-windows-amd64
+            asset_name: windows-pie.exe
           - os: macos-latest
             artifact_name: pie
-            asset_name: pie-macos-amd64
+            asset_name: macos-pie
 
     steps:
     - uses: actions/checkout@v2
