--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ spinach = "2"
 ctrlc = { version = "3.0", features = ["termination"] }
 random-string = "1.0"
 remove_dir_all = "0.7.0"
+walkdir = "2"
+zip = "0.6.2"
